fix(modal/custom-instructions): Resolve double and horizontal scrollbars and other broken styles
- Fix double and horizontal scrollbars caused by unnecessary paddings and margins in the `Custom Instructions` dialog
- Improve the border separator styling to clearly distinguish the main content from the 'Cancel' and 'Save' buttons in the dialog footer

Changes summary:
Resolved double and horizontal scrollbar issues in the `Custom Instructions` dialog by removing excess padding and margins that caused overflowing, and enhanced the border separator for a cleaner layout.

--- a/src/sass/elements/_modal.scss
+++ b/src/sass/elements/_modal.scss
@@ -319,7 +319,7 @@
 
 		/* ___ "Custom Instructios", now "Customize ChatGPT" */
 		&:has(textarea) {
-			.flex-grow.overflow-y-auto.p-4:has(.overflow-y-auto[class*="max-h-[60vh]"]) {
+			.grow.overflow-y-auto.p-4:has(>.overflow-y-auto[class*="max-h-[60vh]"]) {
 				padding: 0 !important;
 
 				@include dev('md') {
@@ -328,7 +328,7 @@
 			}
 
 			/* Border separator from footer where are "Enable for new chats", "Cancel" and "Save" buttons are */
-			.-ml-6.-mr-6.border-t {
+			.-ms-6.-me-6.border-t {
 				border-color: var(--c-border) !important;
 				margin: 0 !important;
 			}
